    * 3526 FIX: Inventory scripts are no longer called when no data is available for their section...
    * 3455 FIX: Fixed broken switch port filtering/sorting view
    * 3663 FIX: Added missing system manufacturer filter/painter
    * 3664 FIX: Fixed not working hardware/system serial and model painters and filters...


1.2.8b1:
    Core & Setup:
    * 2771 Errors in Check_MK configuration do not prevent the core from being restarted anymore...
    * 2881 Automatically restart core instead of reload after changes in local check plugins...
    * 3039 Added more useful debugging infos to crash reports...
    * 2682 FIX: Fixed exception Error creating configuration: global name 'extra_host_attributes' is not defined
    * 2443 FIX: Fixed quoting of ! in classical nagios checks configured via WATO...
    * 2718 FIX: Fixed agent timeouts not resulting in a crash report anympore...
    * 2724 FIX: Discovery check: Fixed exception in simulation mode when no cache file present
    * 2756 FIX: SNMP: Generalized error handling of emtpy info for SNMP checks...
    * 2759 FIX: Allowing Emails to contain special characters like umlauts...
    * 2764 FIX: Fixed broken SNMP checks in case SNMP check interval is configured for clusters...
    * 2770 FIX: Check_MK is now warning the user about deprecated but configured checkgroup parameters...
    * 2848 FIX: Fixed cleanup of old autocheck files of cluster hosts...
    * 2894 FIX: Fixed broken cluster checks when using Nagios core...
    * 2926 FIX: Fix exception in WATO when a check man page has not catalog entry
    * 2944 FIX: Fixed exception during config activation having clusters with unresolvable node IP addresses
    * 3037 FIX: Terminate datasource programs when check timeout occurs...
    * 2932 FIX: Removal of duplicate services now also works for hosts that are no longer SNMP+TCP
    * 3168 FIX: Fix duplicate loading of check that have a copy in local/share/check_mk/checks.

    Checks & Agents: